--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="https://kit.fontawesome.com/e2597287a1.js" crossorigin="anonymous"></script>
     <title>Book Store</title>
   </head>
   <body>
